[TASK] Add prismjs for syntax highlighting and create getting started section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
     <link rel="stylesheet" href="./css/burgton-site.css">
 
+    <!-- burgton button -->
     <script type="module" src="node_modules/burgton-button/index.js"></script>
+
+    <!-- prismjs -->
+    <script src="node_modules/prismjs/prism.js"></script>
+    <link rel="stylesheet" href="node_modules/prismjs/themes/prism-tomorrow.css">
+
+    <!-- custom js for the burgton-site -->
     <script src="js/main.js" defer></script>
 </head>
 
@@ -18,7 +25,7 @@
     <div class="topbar">
         <burgton-button type="default" class="topbar__button" targetSelectors="#contentContainer" targetClasses="nav-active"></burgton-button>
         <h1 class="topbar__title">Burgton<span class="topbar__title-span">Button</span></h1>
-        <a href="https://github.com/boguz/burgton-button" class="topbar__link"></a>
+        <a href="https://github.com/boguz/burgton-button" target="_blank" class="topbar__link"></a>
     </div>
 
     <div class="container" id="contentContainer">
@@ -26,6 +33,7 @@
             <ul class="nav__list">
                 <li class="nav__item nav__clickable">Introduction</li>
                 <li class="nav__item nav__clickable nav__clickable--active">Getting Started</li>
+                <li class="nav__item nav__clickable">Examples</li>
                 <li class="nav__item nav__clickable">API</li>
                 <li class="nav_sublist-container">
                     <ul class="nav__sublist">
@@ -41,7 +49,41 @@
             </ul>
         </nav>
 
-        <main class="content"></main>
+        <main class="content">
+            <section id="introduction" class="section">
+                <h2 class="section__title">Introduction</h2>
+                <p class="section__text">Burgton-button is a small customisable lit-element burger menu that you can use in your projects.</p>
+                <p class="section__text">Amongst other features, it allows you to choose from different animations, customise colours, animation
+                    speed and event toggle classes on multiple targets on the page.</p>
+            </section>
+
+            <section id="gettingStarted" class="section">
+                <h2 class="section__title">Getting started</h2>
+                <p class="section__text">You can use the Burton-button on your project in 3 simple steps:</p>
+                <p class="section__text">1. Install the Burton-button on your project via NPM (or download it <a href="https://github.com/boguz/burgton-button" target="_blank">here</a>)</p>
+                <pre class="code__example"><code class="language-shell-session">npm install burgton-button</code></pre>
+                <p class="section__text">2. Import the burgeon-button module on your project</p>
+                <pre class="code__example"><code class="language-html">&lt;script type="module" src="node_modules/burgton-button/index.js">&lt;/script></code></pre>
+                <p class="section__text">3. Add the burgeon-button element to you page with any property you need</p>
+                <pre class="code__example"><code class="language-html">&lt;burgton-button type="astronaut">&lt;/burgton-button></code></pre>
+            </section>
+
+            <section class="section">
+                <h2 class="section__title">Examples</h2>
+            </section>
+
+            <section class="section">
+                <h2 class="section__title">API</h2>
+            </section>
+
+            <section class="section">
+                <h2 class="section__title">Styles</h2>
+            </section>
+
+            <section class="section">
+                <h2 class="section__title">Contributing</h2>
+            </section>
+        </main>
     </div>
 
 
