[TASK] Add author section, smooth scroll to sections accounting for topbar height

--- a/index.html
+++ b/index.html
@@ -31,33 +31,33 @@
     <div class="container" id="contentContainer">
         <nav class="sidebar">
             <ul class="nav__list">
-                <li class="nav__item nav__clickable">Introduction</li>
-                <li class="nav__item nav__clickable nav__clickable--active">Getting Started</li>
-                <li class="nav__item nav__clickable">Examples</li>
-                <li class="nav__item nav__clickable">API</li>
+                <li class="nav__item"><a class="nav__link" href="#sectionIntroduction">Introduction</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="#sectionGettingStarted">Getting Started</a></li>
+                <li class="nav__item"><a class="nav__link" href="#sectionExamples">Examples</a></li>
+                <li class="nav__item"><a class="nav__link" href="#sectionAPI">API</a></li>
                 <li class="nav_sublist-container">
                     <ul class="nav__sublist">
-                        <li class="nav__subitem nav__clickable">Button Types</li>
-                        <li class="nav__subitem nav__clickable">Line Colors</li>
-                        <li class="nav__subitem nav__clickable">Animation Duration</li>
-                        <li class="nav__subitem nav__clickable">Animation Delay</li>
-                        <li class="nav__subitem nav__clickable">Border Radius</li>
+                        <li class="nav__subitem"><a class="nav__link" href="#sectionButtonTypes">Button Types</a></li>
+                        <li class="nav__subitem"><a class="nav__link" href="#sectionLineColors">Line Colors</a></li>
+                        <li class="nav__subitem"><a class="nav__link" href="#sectionAnimationDuration">Animation Duration</a></li>
+                        <li class="nav__subitem"><a class="nav__link" href="#sectionAnimationDelay">Animation Delay</a></li>
+                        <li class="nav__subitem"><a class="nav__link" href="sectionBorderRadius">Border Radius</a></li>
                     </ul>
                 </li>
-                <li class="nav__item nav__clickable">Styles</li>
-                <li class="nav__item nav__clickable">Contributing</li>
+                <li class="nav__item"><a class="nav__link" href="#sectionStyles">Styles</a></li>
+                <li class="nav__item"><a class="nav__link" href="#sectionContributing">Contributing</a></li>
             </ul>
         </nav>
 
         <main class="content">
-            <section id="introduction" class="section">
+            <section id="sectionIntroduction" class="section">
                 <h2 class="section__title">Introduction</h2>
                 <p class="section__text">Burgton-button is a small customisable lit-element burger menu that you can use in your projects.</p>
                 <p class="section__text">Amongst other features, it allows you to choose from different animations, customise colours, animation
                     speed and event toggle classes on multiple targets on the page.</p>
             </section>
 
-            <section id="gettingStarted" class="section">
+            <section id="sectionGettingStarted" class="section">
                 <h2 class="section__title">Getting started</h2>
                 <p class="section__text">You can use the Burton-button on your project in 3 simple steps:</p>
                 <p class="section__text">1. Install the Burton-button on your project via NPM (or download it <a href="https://github.com/boguz/burgton-button" target="_blank">here</a>)</p>
@@ -68,21 +68,25 @@
                 <pre class="code__example"><code class="language-html">&lt;burgton-button type="astronaut">&lt;/burgton-button></code></pre>
             </section>
 
-            <section class="section">
+            <section id="sectionExamples" class="section">
                 <h2 class="section__title">Examples</h2>
             </section>
 
-            <section class="section">
+            <section id="sectionAPI" class="section">
                 <h2 class="section__title">API</h2>
             </section>
 
-            <section class="section">
+            <section id="sectionStyles" class="section">
                 <h2 class="section__title">Styles</h2>
             </section>
 
-            <section class="section">
+            <section id="sectionContributing" class="section">
                 <h2 class="section__title">Contributing</h2>
+                <p class="section__text">If you have any ideas, suggestions or questions, you can contact us on our <a href="https://github.com/boguz/burgton-button" target="_blank">Github Page</a>.</p>
+                <p class="section__text">You can also find the burgton-buttons package on <a href="https://www.npmjs.com/package/burgton-button" target="_blank">NPM</a>.</p>
             </section>
+
+            <div class="author">Made with &#9829; by <a href="https://github.com/boguz" target="_blank">Boguz</a></div>
         </main>
     </div>
 
