[TASK] Add hash links to the sections

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
         <main class="content">
             <section id="sectionIntroduction" class="section">
+                <a href="#sectionIntroduction" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Introduction</h2>
                 <p class="section__text">Burgton-button is a small customisable lit-element burger menu that you can use in your projects.</p>
                 <p class="section__text">Amongst other features, it allows you to choose from different animations, customise colours, animation
@@ -58,6 +59,7 @@
             </section>
 
             <section id="sectionGettingStarted" class="section">
+                <a href="#sectionGettingStarted" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Getting started</h2>
                 <p class="section__text">You can use the Burton-button on your project in 3 simple steps:</p>
                 <p class="section__text">1. Install the Burton-button on your project via NPM (or download it <a href="https://github.com/boguz/burgton-button" target="_blank">here</a>)</p>
@@ -69,18 +71,22 @@
             </section>
 
             <section id="sectionExamples" class="section">
+                <a href="#sectionExamples" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Examples</h2>
             </section>
 
             <section id="sectionAPI" class="section">
+                <a href="#sectionAPI" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">API</h2>
             </section>
 
             <section id="sectionStyles" class="section">
+                <a href="#sectionStyles" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Styles</h2>
             </section>
 
             <section id="sectionContributing" class="section">
+                <a href="#sectionContributing" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Contributing</h2>
                 <p class="section__text">If you have any ideas, suggestions or questions, you can contact us on our <a href="https://github.com/boguz/burgton-button" target="_blank">Github Page</a>.</p>
                 <p class="section__text">You can also find the burgton-buttons package on <a href="https://www.npmjs.com/package/burgton-button" target="_blank">NPM</a>.</p>
