[TASK] Add type examples and examples styles

--- a/index.html
+++ b/index.html
@@ -73,6 +73,69 @@
             <section id="sectionExamples" class="section">
                 <a href="#sectionExamples" class="section__hash-link" aria-hidden="true" tabindex="-1">#</a>
                 <h2 class="section__title">Examples</h2>
+
+                <div class="examples">
+                    <div class="examples__card">
+                        <burgton-button></burgton-button>
+                        <span class="examples__title">Default</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="arrow-left"></burgton-button>
+                        <span class="examples__title">Arrow Left</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="arrow-right"></burgton-button>
+                        <span class="examples__title">Arrow Right</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="arrow-to-arrow"></burgton-button>
+                        <span class="examples__title">Arrow to arrowt</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="astronaut"></burgton-button>
+                        <span class="examples__title">Astronaut</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="async"></burgton-button>
+                        <span class="examples__title">Async</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="crossed"></burgton-button>
+                        <span class="examples__title">Crossed</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="ellipsis"></burgton-button>
+                        <span class="examples__title">Ellipsis</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="fall-down"></burgton-button>
+                        <span class="examples__title">Fall down</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="minus"></burgton-button>
+                        <span class="examples__title">Minus</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="rotator"></burgton-button>
+                        <span class="examples__title">Rotator</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="spin"></burgton-button>
+                        <span class="examples__title">Spin</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="underlined"></burgton-button>
+                        <span class="examples__title">Underlined</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="vertical-rotator"></burgton-button>
+                        <span class="examples__title">Vertical Rotator</span>
+                    </div>
+                    <div class="examples__card">
+                        <burgton-button type="zoom"></burgton-button>
+                        <span class="examples__title">Zoom</span>
+                    </div>
+                </div>
             </section>
 
             <section id="sectionAPI" class="section">
